--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@supabase/supabase-js": "^1.35.3"
+	}
 }
